--- a/assets/404.html
+++ b/assets/404.html
@@ -1,14 +1,18 @@
----
-layout: page
-title: "404: Page not found"
-permalink: /404.html
-
-redirect_from:
-  - /norobots/
-  - /assets/
-  - /posts/
----
-
-{% include lang.html %}
-
-<p class="lead">{{ site.data.locales[lang].not_found.statment }}</p>
+<!DOCTYPE HTML>
+<html>
+<head>
+  <meta http-equiv="content-type" content="text/html;charset=utf-8;"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+  <meta name="robots" content="all" />
+  <meta name="robots" content="index,follow"/>
+  <link rel="stylesheet" type="text/css" href="https://qzone.qq.com/gy/404/style/404style.css">
+</head>
+<body>
+  <script type="text/plain" src="http://www.qq.com/404/search_children.js"
+          charset="utf-8" homePageUrl="/"
+          homePageName="回到我的主页">
+  </script>
+  <script src="https://qzone.qq.com/gy/404/data.js" charset="utf-8"></script>
+  <script src="https://qzone.qq.com/gy/404/page.js" charset="utf-8"></script>
+</body>
+</html>
